--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -6,3 +6,12 @@
 body {
   margin: 2em;
 }
+
+@media (max-width: 640px) {
+  body {
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
