--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,13 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Hina+Mincho&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Klee+One:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200;300;400;500;600;700;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New:wght@100;300;400;500;700;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Zen+Old+Mincho:wght@400;700;900&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Hina+Mincho&display=swap"); */
+/* @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"); */
+/* @import url("https://fonts.googleapis.com/css2?family=Klee+One:wght@400;700&display=swap"); */
+/* @import url("https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap"); */
+/* @import url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap"); */
+/* @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap"); */
+/* @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200;300;400;500;600;700;900&display=swap"); */
+/* @import url("https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap"); */
+/* @import url("https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New:wght@100;300;400;500;700;900&display=swap"); */
+/* @import url("https://fonts.googleapis.com/css2?family=Zen+Old+Mincho:wght@400;700;900&display=swap"); */
 @import "tailwindcss";
 @import "./tailwindFontSize.css";
 @plugin "daisyui" {
