--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -5,22 +5,28 @@
   themes: false;
   include:
     properties, reset, rootcolor, rootscrollgutter, rootscrolllock, svg, scrollbar, button, input, label, fieldset, select, alert, badge,
-    toast, collapse, status;
+    toast, collapse, status, toggle;
 }
 
-/* biome-ignore format: this looks nicer */
 @layer base {
-  [data-font-family]:not(
-    [data-font-family="Hina Mincho"],
-    [data-font-family="Klee One"],
-    [data-font-family="IBM Plex Sans JP"]
-  ) {
+  [data-use-system-font="true"] {
     font-family: var(--system-font);
   }
-
-  [data-font-family="Hina Mincho"] { font-family: "Hina Mincho", serif; font-weight: 400; font-style: normal; }
-  [data-font-family="Klee One"] { font-family: "Klee One", cursive; font-weight: 400; font-style: normal; }
-  [data-font-family="IBM Plex Sans JP"] { font-family: "IBM Plex Sans JP", sans-serif; font-weight: 400; font-style: normal; }
+  [data-use-system-font="false"][data-web-font="Hina Mincho"] {
+    font-family: "Hina Mincho", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  [data-use-system-font="false"][data-web-font="Klee One"] {
+    font-family: "Klee One", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
+  [data-use-system-font="false"][data-web-font="IBM Plex Sans JP"] {
+    font-family: "IBM Plex Sans JP", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
 }
 
 @font-face {
