--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -8,37 +8,28 @@
     toast, collapse, status, toggle;
 }
 
+/* biome-ignore format: this looks nicer */
 @layer base {
-  [data-use-system-font-primary="true"] [data-font-primary="true"] {
-    font-family: var(--system-font-primary);
-  }
-  [data-use-system-font-secondary="true"] [data-font-secondary="true"] {
-    font-family: var(--system-font-secondary);
-  }
-  [data-use-system-font-primary="false"][data-web-font-primary="Hina Mincho"]
-    [data-font-primary="true"],
-  [data-use-system-font-secondary="false"][data-web-font-secondary="Hina Mincho"]
-    [data-font-secondary="true"] {
-    font-family: "Hina Mincho", serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  [data-use-system-font-primary="false"][data-web-font-primary="Klee One"]
-    [data-font-primary="true"],
-  [data-use-system-font-secondary="false"][data-web-font-secondary="Klee One"]
-    [data-font-secondary="true"] {
-    font-family: "Klee One", cursive;
-    font-weight: 400;
-    font-style: normal;
-  }
-  [data-use-system-font-primary="false"][data-web-font-primary="IBM Plex Sans JP"]
-    [data-font-primary="true"],
-  [data-use-system-font-secondary="false"][data-web-font-secondary="IBM Plex Sans JP"]
-    [data-font-secondary="true"] {
-    font-family: "IBM Plex Sans JP", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
+  [data-use-system-font-primary="true"] [data-font-primary="true"] { font-family: var(--system-font-primary); }
+  [data-use-system-font-secondary="true"] [data-font-secondary="true"] { font-family: var(--system-font-secondary); }
+
+  [data-use-system-font-primary="false"][data-web-font-primary="Hina Mincho"] [data-font-primary="true"],
+  [data-use-system-font-primary="false"][data-web-font-primary="Hina Mincho"][data-font-primary="true"][data-font-scope="local"],
+  [data-use-system-font-secondary="false"][data-web-font-secondary="Hina Mincho"] [data-font-secondary="true"],
+  [data-use-system-font-secondary="false"][data-web-font-secondary="Hina Mincho"][data-font-secondary="true"][data-font-scope="local"]
+  { font-family: "Hina Mincho", serif; font-weight: 400; font-style: normal; }
+
+  [data-use-system-font-primary="false"][data-web-font-primary="Klee One"] [data-font-primary="true"],
+  [data-use-system-font-primary="false"][data-web-font-primary="Klee One"][data-font-primary="true"][data-font-scope="local"],
+  [data-use-system-font-secondary="false"][data-web-font-secondary="Klee One"] [data-font-secondary="true"], 
+  [data-use-system-font-secondary="false"][data-web-font-secondary="Klee One"][data-font-secondary="true"][data-font-scope="local"]
+  { font-family: "Klee One", cursive; font-weight: 400; font-style: normal; }
+
+  [data-use-system-font-primary="false"][data-web-font-primary="IBM Plex Sans JP"] [data-font-primary="true"],
+  [data-use-system-font-primary="false"][data-web-font-primary="IBM Plex Sans JP"][data-font-primary="true"][data-font-scope="local"],
+  [data-use-system-font-secondary="false"][data-web-font-secondary="IBM Plex Sans JP"] [data-font-secondary="true"],
+  [data-use-system-font-secondary="false"][data-web-font-secondary="IBM Plex Sans JP"][data-font-secondary="true"][data-font-scope="local"]
+  { font-family: "IBM Plex Sans JP", sans-serif; font-weight: 400; font-style: normal; }
 }
 
 @font-face {
