feat: ssr support hint field

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -377,6 +377,13 @@ body {
       @apply flex;
     }
   }
+
+  .hint-field {
+    @apply hidden;
+    &[data-has-hint="true"] {
+      @apply flex;
+    }
+  }
 }
 
 /*
