feat: change fontsize setting using slider

--- a/packages/note/src/styles/daisyui.css
+++ b/packages/note/src/styles/daisyui.css
@@ -2,7 +2,7 @@
   root: ":root:not([data-theme='none'])";
   themes: all;
   include:
-    properties, reset, rootcolor, rootscrollgutter, rootscrolllock, svg, scrollbar, button, input, label, fieldset, select, alert, badge, toast, collapse, status, toggle, list, loading;
+    properties, reset, rootcolor, rootscrollgutter, rootscrolllock, svg, scrollbar, button, input, label, fieldset, select, alert, badge, toast, collapse, status, toggle, list, loading, range;
 }
 
 /* biome-ignore format: this looks nicer */
