feat: stick header to the top

--- a/packages/note/src/styles/tailwind.css
+++ b/packages/note/src/styles/tailwind.css
@@ -229,6 +229,14 @@ body {
   background-color: var(--color-base-content-subtle-300) !important;
 }
 
+.invisible-scrollbar.invisible-scrollbar::-webkit-scrollbar {
+  background-color: transparent !important;
+}
+
+.invisible-scrollbar.invisible-scrollbar::-webkit-scrollbar-thumb {
+  background-color: transparent !important;
+}
+
 @media (min-width: 40rem) {
   *::-webkit-scrollbar {
     width: 10px !important;
