feat: new mod vertical

--- a/packages/note/src/styles/tailwind.css
+++ b/packages/note/src/styles/tailwind.css
@@ -179,6 +179,10 @@
       @apply flex;
     }
   }
+
+  [data-mod-vertical="true"] .vertical-rl {
+    writing-mode: vertical-rl;
+  }
 }
 
 @font-face {
