fix: horizontal tb on kanji hover

--- a/packages/note/src/styles/tailwind.css
+++ b/packages/note/src/styles/tailwind.css
@@ -192,6 +192,10 @@
   [data-mod-vertical="true"] .vertical-rl {
     writing-mode: vertical-rl;
   }
+
+  .horizontal-tb {
+    writing-mode: horizontal-tb;
+  }
 }
 
 @font-face {
